Play table now works. Swapped pile labels to buttons. Got player hand working. Got stock pile working. Got play states working. Need to tidy up game manager methods to shorten calls within Game class. Need to create method in game manager to check a card is playable - see comments within method body.